--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "title": "Illuminate Keyboard",
   "description": "Toggle your MacBook keyboard backlight on and off with a single command",
   "icon": "extension-icon.png",
-  "author": "sandrovolpicella",
+  "author": "sandro_vol",
   "categories": ["System"],
   "license": "MIT",
   "commands": [
@@ -17,7 +17,6 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.60.1",
-    "@raycast/utils": "^1.10.1",
     "execa": "^8.0.1"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
     "lint": "ray lint",
-    "publish": "npx @raycast/api@latest publish"
+    "publish": "npx @raycast/api@latest publish",
+    "typecheck": "tsc --noEmit"
   }
 }
